--- a/content.tex
+++ b/content.tex
@@ -216,16 +216,43 @@ Innovations Association FRUCT (Финляндия, Оулу, 2014).
 Метрика проверки знания предметного термина с помощью тестов основана на статистическом анализе правильных и нерпавильных ответов студента на задания учебных курсов, которые связаны с данным термином. В разработанном подходе данная метрика составляет 85\% от общего рейтинга знаний предметного термина. Метрика расчитывается как нижняя граница доверительного интервала Вильсона для параметра Бернулли по количеству правильных и неправильных ответов, используя формулу:
 
 $$
-  \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-  \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
+    R_t = \frac{p+\frac{1}{2n}z_{1-\alpha/2}^2 \pm z_{1-\alpha/2}\sqrt{\frac{p(1-p)}{n}+\frac{z_{1-\alpha/2}^2}{4n^2}}{} }{1+\frac{1}{n}z_{1-\alpha/2}^2},
 $$
 
-Сумма двух полученных метрик для предметного термина в соответствии с их долями является общим рейтингом знания предметного термина. Предметные области и предметные термины в соответсвии с разработанной моделью не зависят от учебных материалов и могут повторно использоваться в множестве учебных курсов. Связи между терминами описывающие необходимость одного термина для изучения другого позволяют расчитать важность предметного термина в образовательном процессе. Чем больше предметных терминов, для изучения которых необходим определенный термин тем выше значение данного термина. При расчет учитывается количество терминов на разных уровнях зависимости. Уровнем зависимости является глубина косвенной зависимости одного термина от другого через набор терминов. Например, на втором уровне зависимости находятся термины зависимые от предметных терминов зависимых от рассматриваемого предметного термина. Значение термина расчитывается с использованием трех уровней зависимости, используя формулу. 
+где \(z_{1-\alpha/2}\) - квантиль от от \(1-\alpha/2\) стандартного нормального распределения, \(p\) - доля правильных ответов, \(n\) - общее количество ответов. 
+
+Сумма двух полученных метрик для предметного термина в соответствии с их долями является общим рейтингом знания предметного термина. Предметные области и предметные термины в соответсвии с разработанной моделью не зависят от учебных материалов и могут повторно использоваться в множестве учебных курсов. Связи между терминами описывающие необходимость одного термина для изучения другого позволяют расчитать важность предметного термина в образовательном процессе. Чем больше предметных терминов, для изучения которых необходим определенный термин тем выше значение данного термина. При расчет учитывается количество терминов на разных уровнях зависимости. Уровнем зависимости является глубина косвенной зависимости одного термина от другого через набор терминов. Например, на втором уровне зависимости находятся термины зависимые от предметных терминов зависимых от рассматриваемого предметного термина. Значение термина расчитывается с использованием трех уровней зависимости по формуле: 
 
 $$
-  \lambda_{T_s} = K_x\frac{d{x}}{d{T_s}}, \qquad
-  \lambda_{q_s} = K_x\frac{d{x}}{d{q_s}},
+    W_t = \frac{1}{e}+\sum_{k=1}^{3}\frac{n_k}{e^k}, 
 $$
+
+где \(n\) - количество терминов связанных с данным термином на каждом уровне зависимости, \(k\) - номер зависимого уровня, \( \frac{1}{e} \) - константное значение термина. 
+
+Итоговый рейтинг знания студентом предметной области учебной дисциплины расчитывается как сумма рейтингов предметных терминов, входящих в предметную область. При расчете необходимо учитывать относительное значение термина в предметной области. Для этого необходимо расчитать суммарное значение предметной области, используя формулу:
+
+$$  
+    W_f = \sum_{n=1}^{\infty}W_t,
+$$
+
+где \(W_t\) - значение предметного термина, \(n\) - количество терминов в предметной области.
+
+Относительное значение термина в предметной области расчитывается по формуле:
+
+$$
+    D_t = \frac{W_t}{W_f},
+$$
+
+где \(W_t\) - значение термина, \(W_f\) - значение предметной области.
+
+Рейтинг предметной области является суммой рейтингов предметных терминов в соответсвии с их относительными значениями:
+
+$$
+    R_f = \sum_{n=1}^{\infty} R_tD_t,
+$$
+где \(R_t\) рейтинг термина, \(D_t\) - относительное значение термина в предметной области.
+
+Представленный подход позволяет производить автоматизированную оценку знания студентами предметных областей. Поддержка набора метрик позволяет системе варьировать алгоритмы расчета оценки, добавляя, изменяя и удаляя необходимые метрики. Помимо оценки предметных областей данный подход можно применять к любым объектам образовательного процесса на прямую или косвенно свянным с предметными терминами. Подход позволяет производить оценку учебных курсов и специальностей.  
 
 В \textbf{четвертой главе} приведено описание 
 
